[gd_scene load_steps=3 format=3 uid="uid://bt25vi46gotjd"]

[ext_resource type="Script" path="res://src/scripts/userinterface/inventory/ItemSlot.gd" id="1_cq7j6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wmmiw"]
bg_color = Color(0.244776, 0.244776, 0.244776, 1)

[node name="ItemSlot" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_wmmiw")
script = ExtResource("1_cq7j6")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ItemName" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="ItemIcon" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 2

[node name="HoverText" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4

[connection signal="mouse_entered" from="HBoxContainer" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer" to="." method="_on_mouse_exited"]
